styles/header.css
header {
  display: flex;
  padding: 1rem 9.375rem;
  justify-content: space-between;
  align-items: center;
  background: #0b9586;
  letter-spacing: 0.0586rem;
  position: relative;
}

/************************ Logo **************************/
header .logo {
  width: 9.8125rem;
  height: 3.375rem;
  background: url("../assets/images/placeholder.png") no-repeat center center /
    cover;
  mix-blend-mode: multiply;
}

/************************ Navigation **************************/
nav {
  display: flex;
  gap: 0.5rem;
  min-width: 28.125rem;
}

nav a {
  display: flex;
  padding: 0.5rem 0;
  align-items: center;
  justify-content: center;
  gap: 0.625rem;
  border-radius: 0.3125rem;
  white-space: nowrap;
  flex: 1;
  transition: all 0.3s ease;
}

nav a > span {
  color: #fff;
  font-size: 1.125rem;
  font-weight: 400;
}

nav a:hover {
  box-shadow: inset 0 -0.1875rem 0 rgba(0, 0, 0, 0.3);
  background: rgba(0, 0, 0, 0.06);
}

nav a:hover > span {
  text-shadow: 0rem 0rem 0.1875rem #fff;
}

/************************ Contact **************************/
.contact-ctn {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 0.5rem;
}

.contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
}

.contact > .call-us {
  color: #fff;
  font-size: 1.125rem;
  font-weight: 400;
}

.contact > .number {
  color: #fff;
  font-size: 1.5rem;
  font-weight: 700;
}

/************************** Menu ***************************/
.mobile-first-row {
  display: none;
}

.close-btn {
  display: none;
}

.menu-btn {
  display: none;
  font-size: 2rem;
  background: none;
  border: none;
  color: white;
  cursor: pointer;
}

/************************* Media Queries **************************/
@media screen and (max-width: 1250px) {
  header {
    padding: 1rem 1.5625rem;
  }
}

@media screen and (max-width: 1000px) {
  header {
    flex-direction: column;
    gap: 1rem;
  }

  header > .logo {
    display: none;
  }

  header > .contact-ctn {
    display: none;
  }

  nav {
    display: flex;
    flex-direction: column;
    position: fixed;
    top: 0;
    right: -100%;
    width: 70%;
    height: 100vh;
    background: #0b9586;
    box-shadow: -4px 0px 10px rgba(0, 0, 0, 0.2);
    padding-top: 4rem;
    transition: right 0.4s ease-in-out;
    z-index: 1000;
  }

  nav a {
    padding: 1.5rem;
    text-align: center;
    display: block;
    flex: unset;
    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  }

  .mobile-first-row {
    display: flex;
    justify-content: space-between;
    width: 100%;
  }

  .menu-btn {
    display: block;
  }

  .close-btn {
    display: block;
    position: absolute;
    top: 1rem;
    right: 1rem;
    font-size: 2rem;
    background: none;
    border: none;
    color: white;
    cursor: pointer;
  }

  nav.active {
    right: 0;
  }
}

@media screen and (max-width: 750px) {
  header {
    padding: 0.5rem 0.75rem;
  }
}

